<resources>
    <string name="app_name">Desafio Android</string>
    <string name="erro_carregar">Erro ao carregar informações</string>
    <string name="nome_personagem">Nome Personagem</string>
    <string name="descricao_personagem">Descrição do personagem</string>
    <string name="hq">HQ Mais Cara</string>
    <string name="titulo_comic">Título do quadrinho</string>
    <string name="preco">Price: $__PRECO</string>
</resources>
