<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:layout_margin="20dp"
        android:id="@+id/imgCharacter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nome_personagem"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/white"
        android:layout_weight="1.5"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:maxLines="3"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:text="@string/descricao_personagem"/>

    <Button
        android:id="@+id/btnHQ"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:textStyle="bold"
        android:text="@string/hq"
        android:layout_margin="20dp"/>

</LinearLayout>